manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
    - protocol: TCP
      port: 5000
